fixed accessibility contrast error

--- a/pages/photographer/components/Select.css
+++ b/pages/photographer/components/Select.css
@@ -68,6 +68,7 @@ hr {
     right: 10px;
     transform: translateY(-50%);
     color: white;
+    background-color: #7b2a18;
     z-index: 10;
     transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
